--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,8 @@ jobs:
   release:
   
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/tags/*'
+    #if: github.event_name == 'push' && github.ref == 'refs/tags/*'
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
 
     steps:
       - name: Checkout repository
