--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,8 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     #if: github.event_name == 'push' && github.ref == 'refs/tags/*'
     #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
+    #if: github.event_name == 'push' && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
     #if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+    if: github.event_name == 'push' && github.ref == 'refs/tags/*' && github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout repository
