--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,8 @@ jobs:
     #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     #if: github.event_name == 'push' && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
     #if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
-    #if: github.event_name == 'push' && github.ref == 'refs/tags/*' && github.ref == 'refs/heads/main'
-    if: github.event_name == 'push' && (github.ref == 'refs/tags/*' || github.ref == 'refs/heads/main')
-    steps:
+    if: github.event_name == 'push' && github.ref == 'refs/tags/*' && github.ref == 'refs/heads/main'
+  steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
