--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,8 @@ jobs:
     #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     #if: github.event_name == 'push' && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
     #if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
-    if: github.event_name == 'push' && github.ref == 'refs/tags/*' && github.ref == 'refs/heads/main'
+    #if: github.event_name == 'push' && github.ref == 'refs/tags/*' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && (github.ref_type == 'tag' || (github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')))
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
