--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,14 +4,17 @@ on:
   push:
     tags:
       - "*"
-    branches:
-      - main  
 jobs:
   release:
   
     runs-on: ubuntu-latest
     #working#if: github.event_name == 'push' && (github.ref_type == 'tag' || (github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')))
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
+    #if: github.event_name == 'push' && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
+    if: |
+      (github.event_name == 'push' &&
+      github.event.ref_type == 'tag' &&
+      startsWith(github.event.ref, 'refs/tags/') &&
+      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev'))
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
