--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,10 +11,12 @@ jobs:
     #working#if: github.event_name == 'push' && (github.ref_type == 'tag' || (github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')))
     #if: github.event_name == 'push' && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
     if: |
-      (github.event_name == 'push' &&
+      github.event_name == 'push' &&
       github.event.ref_type == 'tag' &&
-      startsWith(github.event.ref, 'refs/tags/') &&
-      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev'))
+      (
+        (github.ref == 'refs/heads/main' && startsWith(github.event.ref, 'refs/tags/')) ||
+        (github.ref == 'refs/heads/dev' && startsWith(github.event.ref, 'refs/tags/dev/'))
+      )
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
