--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,12 +11,9 @@ jobs:
     #working#if: github.event_name == 'push' && (github.ref_type == 'tag' || (github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')))
     #if: github.event_name == 'push' && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
     if: |
-      github.event_name == 'push' &&
-      github.event.ref_type == 'tag' &&
-      (
-        (github.ref == 'refs/heads/main' && startsWith(github.event.ref, 'refs/tags/')) ||
-        (github.ref == 'refs/heads/dev' && startsWith(github.event.ref, 'refs/tags/dev/'))
-      )
+          github.event_name == 'push' &&
+          startsWith(github.ref, 'refs/tags/') &&
+          github.ref == 'refs/tags/' + github.event.inputs.tag_name
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
