--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     #working#if: github.event_name == 'push' && (github.ref_type == 'tag' || (github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')))
     #if: github.event_name == 'push' && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
-    if: |
+     if: |
           github.event_name == 'push' &&
           startsWith(github.ref, 'refs/tags/') &&
-          github.ref == 'refs/tags/' + github.event.inputs.tag_name
+          github.ref == 'refs/tags/' + env.TAG_NAME
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
