--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,18 +2,16 @@ name: Tag and Release Pipeline - Main
 
 on:
   push:
-    tags:
-      - "*"
+    branches:
+      - main
 jobs:
   release:
   
     runs-on: ubuntu-latest
-    #working#if: github.event_name == 'push' && (github.ref_type == 'tag' || (github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')))
-    #if: github.event_name == 'push' && github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')
-     if: |
-          github.event_name == 'push' &&
-          startsWith(github.ref, 'refs/tags/') &&
-          github.ref == 'refs/tags/' + env.TAG_NAME
+    if: |
+      github.event_name == 'push' &&
+      startsWith(github.ref, 'refs/tags/') &&
+      github.ref == 'refs/heads/main'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
