--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       github.event_name == 'push' &&
-      startsWith(github.ref, 'refs/tags/') &&
+      endsWith(github.ref, 'refs/tags/') &&
       github.ref == 'refs/heads/main'
     steps:
       - name: Checkout repository
