--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       github.event_name == 'push' &&
-      endsWith(github.ref, 'refs/tags/') &&
-      github.ref == 'refs/heads/main'
+      startsWith(github.event.ref, 'refs/tags/') &&
+      github.event.ref == 'refs/heads/main'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
