--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,16 +2,13 @@ name: Tag and Release Pipeline - Main
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - "*"
 jobs:
   release:
   
     runs-on: ubuntu-latest
-    if: |
-      github.event_name == 'push' &&
-      startsWith(github.event.ref, 'refs/tags/') &&
-      github.event.ref == 'refs/heads/main'
+    if: startsWith(github.ref, 'refs/tags/') && github.ref == 'refs/tags/v*' && github.ref == 'refs/heads/main'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
