--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,16 +2,18 @@ name: Tag and Release Pipeline - Main
 
 on:
   push:
+    branches:
+      - main
     tags:
       - "*"
-    branches:
-      - dummy  
-    paths:
-      - '**' 
+   
 jobs:
   release:
   
     runs-on: ubuntu-latest
+    if: |
+          (github.ref == 'refs/heads/main' && github.event_name == 'push' && contains(github.event.head_commit.message, 'skip-ci')) ||
+          (github.ref == 'refs/heads/dev' && github.event_name == 'push' && contains(github.event.head_commit.message, 'skip-ci'))
   
     steps:
       - name: Checkout repository
