--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,9 +12,10 @@ jobs:
   
     runs-on: ubuntu-latest
     if: |
-          (github.ref == 'refs/heads/main' && github.event_name == 'push' && contains(github.event.head_commit.message, 'skip-ci')) ||
-          (github.ref == 'refs/heads/dev' && github.event_name == 'push' && contains(github.event.head_commit.message, 'skip-ci'))
-  
+          github.event_name == 'push' && (
+            github.ref == 'refs/heads/main' ||
+            github.ref == 'refs/heads/dev' && contains(github.event.head_commit.message, 'skip-ci')
+          )
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
