--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,11 +11,8 @@ jobs:
   release:
   
     runs-on: ubuntu-latest
-    if: |
-          github.event_name == 'push' && (
-            github.ref == 'refs/heads/main' ||
-            github.ref == 'refs/heads/dev' && contains(github.event.head_commit.message, 'skip-ci')
-          )
+    if: github.ref == 'refs/tags/*'
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
