--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Echo success message
-        run: echo "Repository successfully checked out!"
+        run: echo "Repository successfully checked out! && Hi"
+       
+
 
  
