--- a/.github/workflows/release-final.yml
+++ b/.github/workflows/release-final.yml
@@ -18,6 +18,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Echo success message
-        run: echo "Repository successfully checked out! && Hi hello"
+        run: echo "Repository successfully checked out! && Hi hello 1"
 
 
