--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Echo success message
-        run: echo "Repository successfully checked out! && Hi hello111"
+        run: echo "Repository successfully checked out! && Hi hello111ajeesh"
        
 
 
